Alteração de arquivos e início das atividades da semana com o projeto

--- a/www/templates/00_base/base_adm.html
+++ b/www/templates/00_base/base_adm.html
@@ -1,12 +1,10 @@
-{% extends '00_base/base_adm.html' %}
+{% extends '00_base/blank.html' %}
 {% load static %}
 
 {% block css %}{% endblock css %}
-
 {% block navbar %}
     {% include '00_base/navbar_adm.html' %}
 {% endblock navbar %}
-
+{% block header %}{% endblock header %}
 {% block content %}{% endblock content %}
-
 {% block js %}{% endblock js %}
